config-root/namespaces/jx-staging/goodnode/goodnode-goodnode-deploy.yaml
# Source: goodnode/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodnode-goodnode
  labels:
    draft: draft-app
    chart: "goodnode-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'goodnode'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: goodnode-goodnode
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: goodnode-goodnode
    spec:
      serviceAccountName: goodnode-goodnode
      containers:
        - name: goodnode
          image: "gcr.io/jx3gke/goodnode:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
