config-root/namespaces/jx-staging/goodnode/goodnode-ingress.yaml
# Source: goodnode/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'goodnode'
  name: goodnode
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: goodnode
              servicePort: 80
      host: goodnode-jx-staging.34.123.102.163.nip.io
